feat: Upgrade to version 3.0.0 with Java 21 and Jakarta EE support